// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummaryTable matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "vertical",
        "WebkitBoxPack": "center",
        "WebkitFlexDirection": "column",
        "WebkitFlexGrow": 1,
        "WebkitJustifyContent": "center",
        "alignItems": "stretch",
        "flexDirection": "column",
        "flexGrow": 1,
        "justifyContent": "center",
        "msFlexAlign": "stretch",
        "msFlexDirection": "column",
        "msFlexPack": "center",
        "msFlexPositive": 1,
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "flex-end",
          "WebkitBoxAlign": "end",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "space-between",
          "alignItems": "flex-end",
          "borderBottomColor": "rgba(203,203,203,1.00)",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "1px",
          "flexDirection": "row",
          "height": "40px",
          "justifyContent": "space-between",
          "marginTop": "16px",
          "msFlexAlign": "end",
          "msFlexDirection": "row",
          "msFlexPack": "justify",
          "paddingBottom": "4px",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(163,163,163,1.00)",
            "direction": "ltr",
            "fontFamily": "Roboto",
            "fontSize": "14px",
            "fontWeight": "normal",
            "lineHeight": "20px",
            "textAlign": "center",
            "textDecoration": "none",
            "textTransform": "none",
          }
        }
      >
        To:
      </div>
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(66,69,74,1.00)",
            "direction": "ltr",
            "fontFamily": "Roboto",
            "fontSize": "24px",
            "fontWeight": "normal",
            "lineHeight": "30px",
            "textAlign": "center",
            "textDecoration": "none",
            "textTransform": "none",
          }
        }
      >
        name
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "flex-end",
          "WebkitBoxAlign": "end",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "space-between",
          "alignItems": "flex-end",
          "borderBottomColor": "rgba(203,203,203,1.00)",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "1px",
          "flexDirection": "row",
          "height": "40px",
          "justifyContent": "space-between",
          "marginTop": "16px",
          "msFlexAlign": "end",
          "msFlexDirection": "row",
          "msFlexPack": "justify",
          "paddingBottom": "4px",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(163,163,163,1.00)",
            "direction": "ltr",
            "fontFamily": "Roboto",
            "fontSize": "14px",
            "fontWeight": "normal",
            "lineHeight": "20px",
            "textAlign": "center",
            "textDecoration": "none",
            "textTransform": "none",
          }
        }
      >
        Amount:
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "baseline",
            "WebkitBoxAlign": "baseline",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitFlexDirection": "row",
            "alignItems": "baseline",
            "display": "flex",
            "flexDirection": "row",
            "msFlexAlign": "baseline",
            "msFlexDirection": "row",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(0,175,255,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto Slab",
              "fontSize": "24px",
              "fontWeight": "700",
              "lineHeight": "30px",
              "marginRight": "2px",
              "textAlign": "right",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          0.20
        </div>
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(66,69,74,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto",
              "fontSize": "16px",
              "fontWeight": "normal",
              "lineHeight": "22px",
              "textAlign": "center",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            style={
              Object {
                "color": "rgba(0,175,255,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto Slab",
                "fontSize": "14px",
                "fontWeight": "700",
                "lineHeight": "20px",
                "textAlign": "right",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            G
          </span>
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            style={
              Object {
                "color": "rgba(0,175,255,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto Slab",
                "fontSize": "13.5px",
                "fontWeight": "700",
                "lineHeight": "16.2px",
                "textAlign": "right",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            $
          </span>
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "flex-end",
          "WebkitBoxAlign": "end",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "space-between",
          "alignItems": "flex-end",
          "borderBottomColor": "rgba(203,203,203,1.00)",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "1px",
          "flexDirection": "row",
          "height": "40px",
          "justifyContent": "space-between",
          "marginTop": "16px",
          "msFlexAlign": "end",
          "msFlexDirection": "row",
          "msFlexPack": "justify",
          "paddingBottom": "4px",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(163,163,163,1.00)",
            "direction": "ltr",
            "fontFamily": "Roboto",
            "fontSize": "14px",
            "fontWeight": "normal",
            "lineHeight": "20px",
            "textAlign": "center",
            "textDecoration": "none",
            "textTransform": "none",
          }
        }
      >
        For:
      </div>
      <div
        className="css-text-901oao css-textMultiLine-cens5h"
        dir="auto"
        style={
          Object {
            "WebkitLineClamp": 2,
            "color": "rgba(66,69,74,1.00)",
            "direction": "ltr",
            "fontFamily": "Roboto",
            "fontSize": "14px",
            "fontWeight": "normal",
            "lineHeight": "20px",
            "marginLeft": "10px",
            "textAlign": "right",
            "textDecoration": "none",
            "textTransform": "none",
          }
        }
      >
        MyReason
      </div>
    </div>
  </div>
</div>
`;

exports[`SummaryTable matches snapshot with minimal properties 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "vertical",
        "WebkitBoxPack": "center",
        "WebkitFlexDirection": "column",
        "WebkitFlexGrow": 1,
        "WebkitJustifyContent": "center",
        "alignItems": "stretch",
        "flexDirection": "column",
        "flexGrow": 1,
        "justifyContent": "center",
        "msFlexAlign": "stretch",
        "msFlexDirection": "column",
        "msFlexPack": "center",
        "msFlexPositive": 1,
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "flex-end",
          "WebkitBoxAlign": "end",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "space-between",
          "alignItems": "flex-end",
          "borderBottomColor": "rgba(203,203,203,1.00)",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "1px",
          "flexDirection": "row",
          "height": "40px",
          "justifyContent": "space-between",
          "marginTop": "16px",
          "msFlexAlign": "end",
          "msFlexDirection": "row",
          "msFlexPack": "justify",
          "paddingBottom": "4px",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(163,163,163,1.00)",
            "direction": "ltr",
            "fontFamily": "Roboto",
            "fontSize": "14px",
            "fontWeight": "normal",
            "lineHeight": "20px",
            "textAlign": "center",
            "textDecoration": "none",
            "textTransform": "none",
          }
        }
      >
        Amount:
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "baseline",
            "WebkitBoxAlign": "baseline",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitFlexDirection": "row",
            "alignItems": "baseline",
            "display": "flex",
            "flexDirection": "row",
            "msFlexAlign": "baseline",
            "msFlexDirection": "row",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(0,175,255,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto Slab",
              "fontSize": "24px",
              "fontWeight": "700",
              "lineHeight": "30px",
              "marginRight": "2px",
              "textAlign": "right",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          0.20
        </div>
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(66,69,74,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto",
              "fontSize": "16px",
              "fontWeight": "normal",
              "lineHeight": "22px",
              "textAlign": "center",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            style={
              Object {
                "color": "rgba(0,175,255,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto Slab",
                "fontSize": "14px",
                "fontWeight": "700",
                "lineHeight": "20px",
                "textAlign": "right",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            G
          </span>
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            style={
              Object {
                "color": "rgba(0,175,255,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto Slab",
                "fontSize": "13.5px",
                "fontWeight": "700",
                "lineHeight": "16.2px",
                "textAlign": "right",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            $
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
